fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 5;
   background-color: rgba(0, 0, 0, 0.6);
   display: none;
   flex-direction: column;
